# wavelet-loss

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pytest.yml  release.yml
docs/: advanced.md  configurations.md  index.md  pywavelets.md  transform-conventions.md  transforms.md
scripts/: README.md  auxiliary_loss_ab.py  overfit_recovery.py  visualize_vae_latent_transforms.py  visualize_wavelet_transforms.py  visualize_wavelet_transforms_README.md  wavelet_coefficients_analysis.py  wavelet_loss_image.py  wavelet_loss_landscape.py  wavelet_loss_latent.py  wavelet_loss_spatial.py  wavelet_loss_spatial_unified.py
scripts/utils/: __init__.py  image_processing.py  plotting.py  vae_utils.py
src/: visualize.py
src/wavelet_loss/: __init__.py  loss.py  musubi.py
src/wavelet_transform/: __init__.py  backends.py  transform.py
tests/: test_backends.py  test_dwt.py  test_gradient_flow.py  test_loss.py  test_metrics.py  test_normalize_bands.py  test_qwt.py  test_qwt_forward.py  test_reduce.py  test_snr_aware_huber.py  test_swt.py  test_swt_parity.py  test_timestep.py  test_wavelet_loss.py  test_wavelet_loss_backend.py
