[project]
name = "wavelet-loss"
version = "0.1.0"
authors = [
  { name="Dave Lage (rockerBOO)", email="rockerboo@gmail.com" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Wavelet-based loss calculations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytorch-wavelets>=1.3.0",
    "pywavelets>=1.8.0",
    "torch>=2.0.0",
]
[project.urls]
Homepage = "https://github.com/rockerBOO/wavelet-loss"
Issues = "https://github.com/rockerBOO/wavelet-loss/issues"
Repository = "https://github.com/rockerBOO/wavelet-loss.git"

[project.optional-dependencies]
visualize = [
    "matplotlib>=3.10.3",
]
image = [
    "opencv-python>=4.7.0",
    "pillow>=10.0.0",
]
vae = [
    "accelerate>=1.8.1",
    "diffusers",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wavelet_loss", "src/wavelet_transform"]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
]
